--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Bienvenue sur la page d'Alice !🎉 </h1>
+    <h1>Bienvenue sur cette démonstration Github ! </h1>
   </header>
 
   <main>
