Mise à jour du footer

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </main>
 
   <footer>
-    <p>Fait avec ❤️ par Marie</p>
+    <p>Démonstration Github fait avec ❤️ par Marie</p>
   </footer>
 
   <script>
